--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
           src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
   </script>
 </head>
-<body style="background-color=#E0FFFF;">
+<body style=bgcolor="#87CEFA">
 
 <h1>
   
