--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html>  
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
@@ -9,7 +9,7 @@
           src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
   </script>
 </head>
-<body style=bgcolor="#87CEFA">
+<body style="background-color:#87cefa;">
 
 <h1>
   
