--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <p>         <p>    <a href="url">Una introducción elemental a las curvas algebraicas y un vistazo a la geometría 
   algebraica. </a>    </p>
   
-  <p> <a href=notasdecurso.html>Notas de curso de la Facultad de Ciencias.</a> </p>
+  <p> <a href="notasdecurso.html">Notas de curso de la Facultad de Ciencias.</a> </p>
   
    <p>    <a href="url">Notas de Arreglos de Hiperplanos y Combinatoria Algebraica. </a> </p>    
 
