--- a/notasdecurso.html
+++ b/notasdecurso.html
@@ -133,6 +133,9 @@
 
   
   <h3>  Materias ajenas a matematicas.</h3>
+  
+  
+  <i> Las notas estaran enfocadas para matematicos. </i>
 
 <ul>
   
@@ -155,7 +158,16 @@
   <li> Ingenieria de software. </li>
   
   <li>  Introduccion a las ciencias de la computacion I-II</li>
+  
+  <li> Fisica Clasica I-IV  </li>
 
+  
+  
+  <li> Fisica Estadistica </li>
+  
+  
+  <li>  Fisica Moderna I-III </li>
+  
   </ul>
 
 
