--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
 
    <p>    <a href="url">Notas de Geometría Algebraica.</a> </p> 
   
+  <p> Material para entrenar para la Olimpiada Mexicana de Matematicas. </p>
+  
   <h4> Sitios web utiles.  </h4>
 
   
