--- a/notasdecurso.html
+++ b/notasdecurso.html
@@ -12,6 +12,11 @@
   </script>
 </head>
 <body style="background-color:#ffa500;">
+  
+  
+  <p> 
+<a href="index.html">\(\Leftarrow \)</a>
+  </p>
 
  <b> Notas de los diferentes cursos que he tomado (o que planeo  tomar , o cuyos contenidos he estudiado por mi cuenta) en la Facultad de Ciencias.  
   </b> 
