--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@
   
   <b> Conciudadanos. </b>
   
- <p> <a href="url">Cristian Emanuel Garay</a> </p>
+ <p> <a href="http://personal.cimat.mx:8181/~cristhian.garay/">Cristhian Emanuel Garay</a> </p>
   
- <p> <a href="url">Javier Elizondo Huerta</a> </p>
+ <p> <a href="https://www.matem.unam.mx/fsd/javier">Javier Elizondo Huerta</a> </p>
   
-<p>  <a href="url">Luis Jorge Sanchez Saldaña</a> </p>
+<p>  <a href="https://sites.google.com/im.unam.mx/luisjorgesanchezsaldana/">Luis Jorge Sanchez Saldaña</a> </p>
 
-  <a href="url">Omar Antolin Camarena</a>
+  <a href="https://www.matem.unam.mx/~omar/">Omar Antolin Camarena</a>
 
-<p>  <a href="url">Xavier Gomez Mont </a> </p>
+<p>  <a href="https://www.cimat.mx/author/gomez-mont-avalos-xavier/">Xavier Gomez Mont </a> </p>
   
   
   <b> Extranjeros.</b>
