--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
  <h2> Acerca de mi. </h2>
   
   
+  <img src="https://drive.google.com/file/d/17FLJOVT31ocefrkkN9V1DC-jL7t9oBWM/view?usp=sharing" alt="Me" width="460" height="345">
+
+  
+  
+  
   <p> -Soy estudiante de licenciatura en Matematicas por parte de la Facultad de Ciencias de la Universidad 
   Nacional Autonoma de México. </p>
   
