--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
  <h2> Acerca de mi. </h2>
   
   
-  <img src="https://drive.google.com/file/d/17FLJOVT31ocefrkkN9V1DC-jL7t9oBWM/view?usp=sharing" alt="Me" width="460" height="345">
+  <img src="20220827_110541.jpg" alt="Me" width="460" height="345">
 
   
   
