--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   
   <h2> Divulgación , notas y material de utilidad. </h2>
   
-  
+  <p> Algunos problemas interesantes. </p>
   
   <h4> Proyectos de Divulgación. </h4>
   
