--- a/index.html
+++ b/index.html
@@ -95,7 +95,11 @@
   
  <p> <a href="url">June Huh</a> </p>
   
-  <p> <a href="url">Oleg Viro</a> </p>
+  <p> <a href="http://www.math.stonybrook.edu/~oleg/">Oleg Viro</a> </p>
+  
+    <p> <a href="https://terrytao.wordpress.com/">Terrace Tao</a> </p>
+
+  
   
   <h4> Vida en Ciencias.  </h4>
   
