--- a/primeraño.html
+++ b/primeraño.html
@@ -72,8 +72,103 @@
   
   <li> Supongamos  \(P \)  </li>
   
+  <li> \(\vdots \)  </li>
+  
+  <li> Por lo tanto \(Q \) </li>
+  
+  <li> Entonces , \(P\Rightarrow Q\)   \(\blacksquare \) </li>
+  
+  
   
   </ol>
+  
+  
+  <p> <b> Demostración por contraposición.  </b> (de \(P \Rightarrow Q \)) </p>
+  
+<ol>  
+ 
+  
+  <li> Supongamos  \(\sim Q \)  </li>
+  
+  <li> \(\vdots \)  </li>
+  
+  <li> Por lo tanto \(\sim P \) </li>
+  
+  <li> Entonces , \(\sim Q \Rightarrow \sim P\)    </li>
+  
+  <li> Por lo tanto , \(P \Rightarrow Q \) \(\blacksquare \) </li>
+  
+  
+  </ol>
+  
+  
+   <p> <b> Demostración por contradicción.  </b> (de \(P \)) </p>
+  
+<ol>  
+ 
+  
+  <li> Supongamos  \(\sim P \)  </li>
+  
+  <li> \(\vdots \)  </li>
+  
+  <li> Por lo tanto \( Q \) </li>
+  
+  <li> \(\vdots \)   </li>
+  
+  <li> Por lo tanto \(\sim   Q\)   </li>
+  
+  <li> Por lo que  , \(Q \ \text{y} \ \sim Q \) es una contradicción. </li>
+  
+  <li> Por eso , \(P  \) \(\blacksquare \) </li>
+  
+  
+  </ol>
+  
+  
+   
+  <p> <b> Demostración por dos partes  </b> (de \(P \Leftrightarrow Q \)) </p>
+  
+<ol>  
+ 
+  
+  <li> Demostrar que   \(P\Rightarrow Q \)  </li>
+  
+  <li> Demostrar que \(Q \Leftarrow   P\)  </li>
+ 
+  
+  <li> Por lo tanto , \(P\Leftrightarrow Q\)   \(\blacksquare \) </li>
+  
+  
+  
+  </ol>
+  
+  
+   
+  <p> <b> Demostración bicondicional  </b> (de \(P \Rightarrow Q \)) </p>
+  
+<ol>  
+ 
+  
+  <li> \(P\) sii \(R_{0}\)  </li>
+  
+  <li>
+  sii \(R_{1}\) </li>
+    
+  <li> \(\vdots \)  </li>
+  
+  <li> sii \(R_{n} \) </li>
+  
+  <li> sii \( Q\)   \(\blacksquare \) </li>
+  
+  
+  
+  </ol>
+  
+  
+  
+  <p>  Ejemplos de demostraciones </p>
+  
+  
   
   
   <h4> Reglas para escribir una demostración. </h4>
@@ -155,7 +250,7 @@
  
   <p> <b> Proposición : </b> \(| \) es una relación  reflexiva y transitiva , pero no es simetrica.   </p>
   
-  <p> <b> Teorema Fundamental de la Aritmeti </b> </p>
+  <p> <b> Teorema Fundamental de la Aritmetica </b> </p>
   
 
   
@@ -175,22 +270,6 @@
   
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
