--- a/indexen.html
+++ b/indexen.html
@@ -66,7 +66,7 @@ Expository papers
   
   <p> Tricks and theorems for IMO. </p>
   
-  <h4> Sitios web utiles.  </h4>
+  <h4> Some Useful Links.  </h4>
 
   
   
