--- a/indexen.html
+++ b/indexen.html
@@ -103,7 +103,7 @@ Expository papers
 
   
   
-  <h4> Vida en Ciencias.  </h4>
+  <h4> Studying and living in mexico.  </h4>
   
   
   <p> Facultad de Ciencias , ESFM , UANM-I and CIMAT. </p>
