--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <p> -Mis intereses son : Geometría (Algebraica Real , Real Algebraica Tropical , Analitica-no Arquimediana , de
     incidencia , discreta)  
   , Combinatoria (Algebraica , Matroides , Arreglos de Hiperplanos )  Teoría de Números (Conjetura ABC
-    , ) , Topología (de Curvas Algebraicas
+    , Conjetura de Andrica) , Topología (de Curvas Algebraicas
     , Simplectica) y Sistemas Dinamicos (Espacio de Teichmüller). </p>
   
   <p> -Email : kevincalderon <b> arroba </b> ciencias <b> punto </b> unam <b> punto </b> mx  </p>
