--- a/indexen.html
+++ b/indexen.html
@@ -32,7 +32,7 @@
   
   <p> -I am a student of the Universidad Nacional Autonoma de Mexico (UNAM)-Mexico City. </p>
   
-  <p> -Algebraic and Rigid Algebraic Geometry (Real Algebraic, Tropical Algebraic, Rigid , Incidence , Discrete and non-Archimedean Algebraic).  
+  <p> -My areas of interest include:  Algebraic and Rigid Algebraic Geometry (Real Algebraic, Tropical Algebraic, Rigid , Incidence , Discrete and non-Archimedean Algebraic).  
   , Combinatorics (Algebraic , Matroids and Hyperplane Arrangements )  Number Theory ( ABC  conjecture and Andrica's conjecture) 
     , ) , Topology (of Algebraic Curves
     and Symplectic) y Dynamical Systems ( Teichmüller Spaces). </p>
