--- a/indexfr.html
+++ b/indexfr.html
@@ -18,13 +18,13 @@
 </h1>  
   
   
-  <p> <a href=indexen.html> English  </a>  , Español , Français , Deutch , Русский
+  <p> <a href=indexen.html> English  </a>  ,    <a href=index.html> Español  </a> , Français , Deutch , Русский
   </p>
   
   
   
 
- <h2> Acerca de mi. </h2>
+ <h2> A propos de moi. </h2>
   
   
   <img src="20220827_110541.jpg" alt="Me" width="460" height="345">
@@ -32,7 +32,7 @@
   
   
   
-  <p> -Je suis étudiant en mathématiques à la faculté des sciences de l' Universidad Nacional Autonoma de Mexico (UNAM).  </p>
+  <p> -Je suis étudiant en mathématiques à la faculté des sciences de l' Universidad Nacional Autonoma de Mexico (UNAM)-Mexique.  </p>
   
   <p> -Mis intereses son : Geometría (Algebraica Real , Real Algebraica Tropical , Analitica-no Arquimediana , de
     incidencia , discreta)  
