--- a/indexde.html
+++ b/indexde.html
@@ -1,1 +1,121 @@
+<!DOCTYPE html>
+<html>  
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Sitio Personal de Kevin</title>
+  <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+  <script id="MathJax-script" async
+          src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+  </script>
+</head>
+<body style="background-color:#87cefa;">
 
+<h1>
+  
+  Kevin Calderon. Persönliche Website. 
+  
+</h1>  
+  
+  
+  <p> English ,    <a href=index.html> Español  </a>  , Français , Deutch , Русский
+  </p>
+  
+
+ <h2> Über mich. </h2>
+  
+  
+  <img src="20220827_110541.jpg" alt="Me" width="460" height="345">
+
+  
+  
+  
+  <p> -Ich studiere an der Universidad Nacional Autonoma de Mexico (UNAM)-Mexiko City. </p>
+  
+  <p> -My areas of interest include:  Algebraic and Rigid Algebraic Geometry (Real Algebraic, Tropical Algebraic, Rigid , Incidence , Discrete and non-Archimedean Algebraic).  
+  , Combinatorics (Algebraic , Matroids and Hyperplane Arrangements )  Number Theory ( ABC  conjecture and Andrica's conjecture) 
+    , ) , Topology (of Algebraic Curves
+    and Symplectic) y Dynamical Systems ( Teichmüller Spaces). </p>
+  
+  <p> -Email : kevincalderon <b> at </b> ciencias <b> dot </b> unam <b> dot </b> mx  </p>
+  
+  
+  
+  <h2> 
+Exemplarische Papiere
+, Enthüllung , und IMO. </h2>
+  
+  <p> Einige interessante Probleme. </p>
+  
+  <h4> 
+Exemplarische Papiere
+. </h4>
+  
+  <h4>  Talks. </h4>
+  
+  <h4>  Notes .   </h4>
+  
+  <p>         <p>    <a href="url"</a> An elementary introduction to algebraic curves and an overview of algebraic geometry. 
+  geometry.    </p>
+  
+  <p> <a href=notasdecurso.html>Course handouts.</a> </p>
+  
+   <p>    <a href="url">Notes in Hyperplane Arrangements and Algebraic Combinatorics. </a> </p>    
+
+   <p>    <a href="url">Algebraic Geometry.</a> </p> 
+  
+  <p> Tricks and theorems for IMO. </p>
+  
+  <h4> Some Useful Links.  </h4>
+
+  
+  
+  <h2> Social </h2>
+  
+  <h4> Great mathematicians. </h4>
+  
+  <b> Mexicans. </b>
+  
+ <p> <a href="http://personal.cimat.mx:8181/~cristhian.garay/">Cristhian Emanuel Garay</a> </p>
+  
+ <p> <a href="https://www.matem.unam.mx/fsd/javier">Javier Elizondo Huerta</a> </p>
+  
+<p>  <a href="https://sites.google.com/im.unam.mx/luisjorgesanchezsaldana/">Luis Jorge Sanchez Saldaña</a> </p>
+
+  <a href="https://www.matem.unam.mx/~omar/">Omar Antolin Camarena</a>
+
+<p>  <a href="https://www.cimat.mx/author/gomez-mont-avalos-xavier/">Xavier Gomez Mont </a> </p>
+  
+  
+  <b> Internationals.</b>
+  
+  <p> <a href="url">Peter Scholze</a> </p>
+  
+  <p> <a href="url">Pierre Deligne</a>  </p>
+  
+<p> <a href="url">Jean Pierre Sarre</a>  </p>
+  
+ <p> <a href="url">June Huh</a> </p>
+  
+  <p> <a href="http://www.math.stonybrook.edu/~oleg/">Oleg Viro</a> </p>
+  
+    <p> <a href="https://terrytao.wordpress.com/">Terrace Tao</a> </p>
+
+  
+  
+  <h4> Studying and living in mexico.  </h4>
+  
+  
+  <p> Facultad de Ciencias , ESFM , UANM-I and CIMAT. </p>
+
+  
+</body>
+  
+ 
+  
+  
+  
+  
+  
+  
+</html>
