--- a/indexde.html
+++ b/indexde.html
@@ -18,7 +18,7 @@
 </h1>  
   
   
-  <p> English ,    <a href=index.html> Español  </a>  , Français , Deutch , Русский
+  <p> <a href=indexen.html> English</a>  ,    <a href=index.html> Español  </a>  , Français , Deutch , Русский
   </p>
   
 
@@ -32,10 +32,10 @@
   
   <p> -Ich studiere an der Universidad Nacional Autonoma de Mexico (UNAM)-Mexiko City. </p>
   
-  <p> -My areas of interest include:  Algebraic and Rigid Algebraic Geometry (Real Algebraic, Tropical Algebraic, Rigid , Incidence , Discrete and non-Archimedean Algebraic).  
-  , Combinatorics (Algebraic , Matroids and Hyperplane Arrangements )  Number Theory ( ABC  conjecture and Andrica's conjecture) 
-    , ) , Topology (of Algebraic Curves
-    and Symplectic) y Dynamical Systems ( Teichmüller Spaces). </p>
+  <p> -Meine Interessengebiete umfassen:  Algebraische und starre algebraische Geometrie (reelle algebraische, tropische algebraische, starre, inzidente, diskrete und nicht-archimedische algebraische).  
+  Kombinatorik (Algebraisch, Matroiden und Hyperebenen-Anordnungen) Zahlentheorie (ABC-Vermutung und Andrica-Vermutung) 
+    ), Topologie (der algebraischen Kurven
+    und Symplektische) y Dynamische Systeme ( Teichmüller-Räume). </p>
   
   <p> -Email : kevincalderon <b> at </b> ciencias <b> dot </b> unam <b> dot </b> mx  </p>
   
@@ -51,30 +51,31 @@ Exemplarische Papiere
 Exemplarische Papiere
 . </h4>
   
-  <h4>  Talks. </h4>
+  <h4>  Konferenzen. </h4>
   
-  <h4>  Notes .   </h4>
+  <h4>  Anmerkungen .   </h4>
   
-  <p>         <p>    <a href="url"</a> An elementary introduction to algebraic curves and an overview of algebraic geometry. 
-  geometry.    </p>
+  <p>         <p>    <a href="url"</a> Eine elementare Einführung in algebraische Kurven und ein Überblick über die algebraische Geometrie. 
+  Geometrie.    </p>
   
-  <p> <a href=notasdecurso.html>Course handouts.</a> </p>
+  <p> <a href=notasdecurso.html>Kurs-Handouts.</a> </p>
   
-   <p>    <a href="url">Notes in Hyperplane Arrangements and Algebraic Combinatorics. </a> </p>    
+   <p>    <a href="url">Anmerkungen zu Hyperplane-Anordnungen und algebraischer Kombinatorik. </a> </p>    
 
-   <p>    <a href="url">Algebraic Geometry.</a> </p> 
+   <p>    <a href="url">Algebraische Geometrie.</a> </p> 
   
-  <p> Tricks and theorems for IMO. </p>
+  <p> Tricks und Theoreme für IMO. </p>
   
-  <h4> Some Useful Links.  </h4>
+  <h4>Einige nützliche Links .  </h4>
+
 
   
   
-  <h2> Social </h2>
+  <h2> Sozial. </h2>
   
-  <h4> Great mathematicians. </h4>
+  <h4> Große Mathematiker. </h4>
   
-  <b> Mexicans. </b>
+  <b> Mexikaner. </b>
   
  <p> <a href="http://personal.cimat.mx:8181/~cristhian.garay/">Cristhian Emanuel Garay</a> </p>
   
@@ -87,7 +88,7 @@ Exemplarische Papiere
 <p>  <a href="https://www.cimat.mx/author/gomez-mont-avalos-xavier/">Xavier Gomez Mont </a> </p>
   
   
-  <b> Internationals.</b>
+  <b> Länderspiele.</b>
   
   <p> <a href="url">Peter Scholze</a> </p>
   
@@ -103,10 +104,10 @@ Exemplarische Papiere
 
   
   
-  <h4> Studying and living in mexico.  </h4>
+  <h4> Studieren und leben in Mexiko.  </h4>
   
   
-  <p> Facultad de Ciencias , ESFM , UANM-I and CIMAT. </p>
+  <p> Facultad de Ciencias , ESFM , UANM-I und CIMAT. </p>
 
   
 </body>
