--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </h1>  
   
   
-  <p> <a href=indexen.html> English  </a>  , Español , Français , Deutch , Русский
+  <p> <a href=indexen.html> English  </a>  , Español , <a href=indexfr.html>   Français    </a>   ,  <a href=indexde.html> Deutch  </a> , <a href=indexru.html> Русский   </a>
   </p>
   
   
