--- a/indexfr.html
+++ b/indexfr.html
@@ -34,46 +34,45 @@
   
   <p> -Je suis étudiant en mathématiques à la faculté des sciences de l' Universidad Nacional Autonoma de Mexico (UNAM)-Mexique.  </p>
   
-  <p> -Mis intereses son : Geometría (Algebraica Real , Real Algebraica Tropical , Analitica-no Arquimediana , de
-    incidencia , discreta)  
-  , Combinatoria (Algebraica , Matroides , Arreglos de Hiperplanos )  Teoría de Números (Conjetura ABC
-    , ) , Topología (de Curvas Algebraicas
-    , Simplectica) y Sistemas Dinamicos (Espacio de Teichmüller). </p>
+  <p> - Mes centres d'intérêt sont : la géométrie (algébrique réelle, algébrique tropicale réelle, analytique-non-archimédienne, incidence, discrète, etc.
+    incidence, discret)  
+  Combinatoire (algébrique, matroïdes, tableaux d'hyperplans) Théorie des nombres (conjecture ABC, conjecture d'Andrica,)
+    Conjecture d'Andrica, ) Topologie (des courbes algébriques, simplectique) et systèmes dynamiques.
+    Simplectique) et Systèmes Dynamiques (Espace de Teichmüller) </p>
   
   <p> -Email : kevincalderon <b> arroba </b> ciencias <b> punto </b> unam <b> punto </b> mx  </p>
   
   
   
-  <h2> Divulgación , notas y material de utilidad. </h2>
+  <h2> Diffusion, notes et matériel utile. </h2>
   
-  <p> Algunos problemas interesantes. </p>
+  <p> Quelques questions intéressantes. </p>
   
-  <h4> Proyectos de Divulgación. </h4>
+  <h4> Projets de vulgarisation.</h4>
   
-  <h4>  Apuntes de eventos a los que he asistido. </h4>
+  <h4>  Notes sur les événements auxquels j'ai participé. </h4>
   
-  <h4> Notas de curso y textos expositorios.   </h4>
+  <h4> Notes de cours et textes expositifs.   </h4>
   
-  <p>         <p>    <a href="url">Una introducción elemental a las curvas algebraicas y un vistazo a la geometría 
-  algebraica. </a>    </p>
+  <p>         <p>    <a href="url">Une introduction élémentaire aux courbes algébriques et un aperçu de la géométrie algébrique.  </a>    </p>
   
   <p> <a href=notasdecurso.html>Notas de curso de la Facultad de Ciencias.</a> </p>
   
    <p>    <a href="url">Notas de Arreglos de Hiperplanos y Combinatoria Algebraica. </a> </p>    
 
-   <p>    <a href="url">Notas de Geometría Algebraica.</a> </p> 
+   <p>    <a href="url">Notes sur la géométrie algébrique.</a> </p> 
   
-  <p> Material para entrenar para la Olimpiada Mexicana de Matematicas. </p>
+  <p> Matériel de formation pour les Olympiades françaises de mathématiques. </p>
   
-  <h4> Sitios web utiles.  </h4>
+  <h4> Sites web utiles.  </h4>
 
   
   
   <h2> Social </h2>
   
-  <h4> Gente a la que admiro muchisimo y que me han inspirado. </h4>
+  <h4> Mathématiciens que j'admire. </h4>
   
-  <b> Conciudadanos. </b>
+  <b> Mexicains. </b>
   
  <p> <a href="http://personal.cimat.mx:8181/~cristhian.garay/">Cristhian Emanuel Garay</a> </p>
   
@@ -86,7 +85,7 @@
 <p>  <a href="https://www.cimat.mx/author/gomez-mont-avalos-xavier/">Xavier Gomez Mont </a> </p>
   
   
-  <b> Extranjeros.</b>
+  <b> international.  </b>
   
   <p> <a href="url">Peter Scholze</a> </p>
   
@@ -102,12 +101,12 @@
 
   
   
-  <h4> Vida en Ciencias.  </h4>
+  <h4> Vivre et étudier au Mexique. </h4>
   
   
-  <p> Recomendaciones de profesores. </p>
+  <p> Facultad de Ciencias , ESFM , UAM-I et CIMAT.</p>
   
-  <p> Sitios agradables en Ciencias. </p>
+
   
 </body>
   
