--- a/indexde.html
+++ b/indexde.html
@@ -18,8 +18,10 @@
 </h1>  
   
   
-  <p> <a href=indexen.html> English</a>  ,    <a href=index.html> Español  </a>  , Français , Deutch , Русский
-  </p>
+  <p> <a href=indexen.html> English  </a>  , Español , <a href=indexfr.html>   Français    </a>   ,  <a href=indexde.html> Deutch  </a> , <a href=indexru.html> Русский   </a>
+   Português   </p>
+  
+  
   
 
  <h2> Über mich. </h2>
