--- a/indexfr.html
+++ b/indexfr.html
@@ -18,8 +18,9 @@
 </h1>  
   
   
-  <p> <a href=indexen.html> English  </a>  ,    <a href=index.html> Español  </a> , Français , Deutch , Русский
-  </p>
+  <p> <a href=indexen.html> English  </a>  , Español , <a href=indexfr.html>   Français    </a>   ,  <a href=indexde.html> Deutch  </a> , <a href=indexru.html> Русский   </a>
+   Português   </p>
+  
   
   
   
