--- a/indexru.html
+++ b/indexru.html
@@ -18,8 +18,9 @@
 </h1>  
   
   
-  <p> English ,    <a href=index.html> Español  </a>  , Français , Deutch , Русский
-  </p>
+<p> <a href=indexen.html> English  </a>  , Español , <a href=indexfr.html>   Français    </a>   ,  <a href=indexde.html> Deutch  </a> , <a href=indexru.html> Русский   </a>
+   Português   </p>
+  
   
 
  <h2> Обо мне. </h2>
