--- a/indexfr.html
+++ b/indexfr.html
@@ -41,7 +41,7 @@
     Conjecture d'Andrica, ) Topologie (des courbes algébriques, simplectique) et systèmes dynamiques.
     Simplectique) et Systèmes Dynamiques (Espace de Teichmüller) </p>
   
-  <p> -Email : kevincalderon <b> arroba </b> ciencias <b> punto </b> unam <b> punto </b> mx  </p>
+  <p> -Email : kevincalderon <b> up </b> ciencias <b> dot </b> unam <b> dot </b> mx  </p>
   
   
   
