--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   
   <p> -Email : kevincalderon <b> arroba </b> ciencias <b> punto </b> unam <b> punto </b> mx  </p>
   
-  
+  <p> <a href=oi2022.html>  Otoño-Invierno 2022  </a> </p>
   
   <h2> Divulgación , notas y material de utilidad. </h2>
   
