--- a/oi2022.html
+++ b/oi2022.html
@@ -20,7 +20,7 @@
   <p> Durante esta temporada las  actividades se realizaran en la Universidad Autonoma Chapingo. </p>
   
   
-  <li> Curso de Estadistica Algebraica y Machine Learning. </li>
+  <li> <a href=aeml.html> Curso de Estadistica Algebraica y Machine Learning.  </a> </li>
    
   <li>   Seminario de Calculo abstractos (vía categorias y algebra). </li>
   
