--- a/aeml.html
+++ b/aeml.html
@@ -47,6 +47,9 @@
   <li> Geometría Algebraida (parte IV) : Representación implicita. </li>
   
   
+
+  
+  
   Parte B (estadistica algebraica ):
   
   <li> Independencia condicional. </li>
@@ -73,7 +76,7 @@
   <li> Estimación MAP e inferencia parametrica.  </li>
   
   
-  Lo que se vaya a ver de Machine Learning dependera los participantes. 
+  Lo que se vaya a ver de Machine Learning dependera los participantes (si queda tiempo podemos ver un poco de teoría de la probabilidad homotopica y \(A_{\infity}\) algebras). 
   
   <h2> Descripción.  </h2>
    
@@ -97,7 +100,7 @@ construir modelos estadisticos que esten en terminos de la geometía algebraica 
   las conexiones entre la geometría algebraica y el diseño de experimentos , el exito de su trabajo dio paso a la investigación formal en estadistica algebraica.</p>
   
   
-  <p>  </p>
+  <p> Para una introducción al curso pueden leer mi articulo introductorio , <a href=https://www.youtube.com/watch?v=irVIQT2-K4I&t=439s> revisar esta platuca </a>  , o para quienes quieran ver el area en acción <a href="http://yaroslavvb.com/papers/pachter-algebraic.pdf"> les recomiendo leer la primera lectura del libro de Patcher y Sturmfels  </a> </p>
   
   
   <h2> Mecanica del curso.  </h2>
@@ -117,7 +120,7 @@ construir modelos estadisticos que esten en terminos de la geometía algebraica 
   
  
   
-  
+  (Aun en proceso)
   
 
   
@@ -125,14 +128,28 @@ construir modelos estadisticos que esten en terminos de la geometía algebraica 
 <h2> Biblografía. </h2>
   
   
+  El curso se va a basar principalmente en el libro <a href="https://bookstore.ams.org/gsm-194/" > Algebraic Statistics de Seth Sullivant  </a> , y nos vamos a referir constantemente al articulo de Diaconis y Sturmferls. 
+  
+  <p> Para la parte de algebra conmutativa usaremos los libros :  <a href="https://www.amazon.com/Introduction-Commutative-Algebra-Addison-Wesley-Mathematics/dp/0201407515" > Introduction to Commutative Algebra de M.Atiyah , I. MacDonald   </a> (solo el primer capitulo) , 
+    
+    <a href="https://link.springer.com/book/10.1007/978-1-4471-4829-6"> Algebraic Geometry and Commutative Algebra de Siegfried Bosch</a>   </p>
 
+  <p> Para geometría algebraica : <a href="https://link.springer.com/book/10.1007/978-1-4757-4497-2"> An Invitation to Algebraic Geometry
+Karen E. Smith, Lauri Kahanpää, Pekka Kekäläinen, William Traves
+ </a> (los dos primeros capitulos) </p>
+  
+<p> Para estadistica algebraica : <a href="https://link.springer.com/book/10.1007/978-3-7643-8905-5">  Lectures on Algebraic Statistics
+ Mathias Drton, Bernd Sturmfels, Seth Sullivant
+ </a>  , <a href="https://www.cambridge.org/core/books/algebraic-statistics-for-computational-biology/2E5CCE6BB6751EB7423EE3D2BF40EBFF"> Algebraic Statistics for Computational Biology  </a>  
+  
+ <a href="https://www.amazon.com/Algebraic-Statistics-Computational-Commutative-Probability/dp/1584882042"> Algebraic Statistics: Computational Commutative Algebra in Statistics  </a> </p>
   
   
+  <p> Recomiendo tener acceso a la revista Annals of Statistics puesto que vamos a utilizar varios de ellos. </p>
  
   
   
 </body>
 </html>
-
 
 
