--- a/aeml.html
+++ b/aeml.html
@@ -100,7 +100,7 @@ construir modelos estadisticos que esten en terminos de la geometía algebraica 
   las conexiones entre la geometría algebraica y el diseño de experimentos , el exito de su trabajo dio paso a la investigación formal en estadistica algebraica.</p>
   
   
-  <p> Para una introducción al curso pueden leer mi articulo introductorio , <a href=https://www.youtube.com/watch?v=irVIQT2-K4I&t=439s> revisar esta platuca </a>  , o para quienes quieran ver el area en acción <a href="http://yaroslavvb.com/papers/pachter-algebraic.pdf"> les recomiendo leer la primera lectura del libro de Patcher y Sturmfels  </a> </p>
+  <p> Para una introducción al curso pueden <a href=Nuevos_panoramas_en_teor_a_de_la_probabilidad_y_ciencia_de_datos__Draft_-3.pdf> leer mi articulo introductorio </a> , <a href=https://www.youtube.com/watch?v=irVIQT2-K4I&t=439s> revisar esta platuca </a>  , o para quienes quieran ver el area en acción <a href="http://yaroslavvb.com/papers/pachter-algebraic.pdf"> les recomiendo leer la primera lectura del libro de Patcher y Sturmfels  </a> </p>
   
   
   <h2> Mecanica del curso.  </h2>
