--- a/aeml.html
+++ b/aeml.html
@@ -118,6 +118,7 @@ construir modelos estadisticos que esten en terminos de la geometía algebraica 
   
   <h2> Notas de curso. </h2>
   
+  <p> <a href=Notas_de_estad_stica_algebraica_draft.pdf> Notas generales </a>
  
   
   (Aun en proceso)
