--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 	 <div>
                        <img src="top1.jpg" width="928" height="95" align="top" alt="" /><br><br>
-<img src="csar_images/Ann-Arbor.jpg" width="300" height="450" align="right" hspace="0" alt="" />
+<img src="20220827_110541.jpg" width="300" height="450" align="right" hspace="0" alt="" />
 
 <!-- Manu table: how to alocate it  -->
 
