--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@ Soy estudiante de licenciatura en matematicas por parte<br>
 - Teoría de números (geometría diofantina y aritmetica).<br/>
 - Teoría Hodge y geometría algebraica compleja. <br/>
 - Topología de curvas algebraicas reales.<br/>
- - Física teoríca (teorías Gauge y SUSY).
+ - Física teoríca (teorías Gauge , SUSY y de cuerdas). <br/>
+- Geometria y topologia diferencial 	
   
   <br/>
 
