--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@ Soy estudiante de licenciatura en matematicas por parte<br>
   <br/>
 
   <i>kevincalderon <b>at</b> ciencias <b>dot</b> unam <b>dot</b> mx</i><br/>
+  
+  <p> <i> El sitio aun esta en construcción. </i> </p>
 
 
 		</p>
@@ -93,8 +95,4 @@ Soy estudiante de licenciatura en matematicas por parte<br>
 
                          </tr>
                        </table>
-
-
-
-
 
