--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ Soy estudiante de licenciatura en matematicas por parte<br>
 - Teoría Hodge y geometría algebraica compleja. <br/>
 - Topología de curvas algebraicas reales.<br/>
  - Física teoríca (teorías Gauge , SUSY y de cuerdas). <br/>
-- Geometria y topologia diferencial 	
+- Geometria y topologia diferencial.	
   
   <br/>
 
