--- a/proyectos.html
+++ b/proyectos.html
@@ -64,14 +64,18 @@
 <BR/></td></tr>
 <tr><td> <br /></td>               <td>
 
-<p><b><font size="4">Personas con las que he trabajado : </font></b><br/><br/>
+<p><b><font size="4">Proyectos 2023-2 : </font></b><br/><br/>
 
-- <a href="http://personal.cimat.mx:8181/~cristhian.garay/index.html" title=""> Dr. Cristhian Emmanuel Garay López.</a>  <br/>        
-- <a href="https://www.matem.unam.mx/fsd/javier" title=""> Dr. Enrique Javier Elizando Huerta.</a>
+-  <a href="https://sites.google.com/view/minicursofsicateorca/página-principal" title="">Mini curso de física teorica.</a>  <br/>        
+
   
   <br/>
 
   <br/>
+
+<p><b><font size="4">Proyectos de investigación : </font></b><br/><br/>
+
+- Acciones de grupo en superficies de Riemman (automorfismos conformes).  <br/>        
 
   
   <p> <i> El sitio aun esta en construcción. </i> </p>
